Endpoints: implementation of /deposit endpoint
